gestion des gabarie

--- a/pillow/pillowmart/mart/templates/index.html
+++ b/pillow/pillowmart/mart/templates/index.html
@@ -19,7 +19,7 @@ index
                                 pillow</h1>
                             <p>Seamlessly empower fully researched 
                                 growth strategies and interoperable internal</p>
-                            <a href="product_list.html" class="btn_1">shop now</a>
+                            <a href="{% url 'product_list' %}" class="btn_1">shop now</a>
                         </div>
                     </div>
                 </div>
