--- a/pillow/pillowmart/mart/templates/login.html
+++ b/pillow/pillowmart/mart/templates/login.html
@@ -32,7 +32,7 @@ login
                             <h2>New to our Shop?</h2>
                             <p>There are advances being made in science and technology
                                 everyday, and a good example of this is the</p>
-                            <a href="#" class="btn_3">Create an Account</a>
+                            <a href="{% url 'register' %}" class="btn_3">Create an Account</a>
                         </div>
                     </div>
                 </div>
@@ -41,26 +41,25 @@ login
                         <div class="login_part_form_iner">
                             <h3>Welcome Back ! <br>
                                 Please Sign in now</h3>
-                            <form class="row contact_form" action="#" method="post" novalidate="novalidate">
-                                <div class="col-md-12 form-group p_star">
-                                    <input type="text" class="form-control" id="name" name="name" value=""
-                                        placeholder="Username">
-                                </div>
-                                <div class="col-md-12 form-group p_star">
-                                    <input type="password" class="form-control" id="password" name="password" value=""
-                                        placeholder="Password">
-                                </div>
-                                <div class="col-md-12 form-group">
+                                <form class="row contact_form" method="POST" novalidate="novalidate">
+                                    {% csrf_token %}
+                                  <div class="col-md-12 form-group p_star">
+                                    {{ form.username }}
+                                  </div>
+                                  <div class="col-md-12 form-group p_star">
+                                    {{ form.password }}
+                                  </div>
+                                  <div class="col-md-12 form-group">
                                     <div class="creat_account d-flex align-items-center">
-                                        <input type="checkbox" id="f-option" name="selector">
-                                        <label for="f-option">Remember me</label>
+                                      <input type="checkbox" id="f-option" name="selector" />
+                                      <label for="f-option">Remember me</label>
                                     </div>
                                     <button type="submit" value="submit" class="btn_3">
-                                        log in
+                                      log in
                                     </button>
-                                    <a class="lost_pass" href="#">forget password?</a>
-                                </div>
-                            </form>
+                                    <a class="lost_pass">forget password?</a>
+                                  </div>
+                                </form>
                         </div>
                     </div>
                 </div>
