--- a/pillow/pillowmart/mart/templates/single-product.html
+++ b/pillow/pillowmart/mart/templates/single-product.html
@@ -28,60 +28,70 @@ Single Product
         <div class="col-lg-12">
           <div class="product_img_slide owl-carousel">
             <div class="single_product_img">
-              <img src="/static/img/product/single_product.png" alt="#" class="img-fluid">
-            </div>
-            <div class="single_product_img">
-              <img src="/static/img/product/single_product.png" alt="#" class="img-fluid">
-            </div>
-            <div class="single_product_img">
-              <img src="/static/img/product/single_product.png" alt="#" class="img-fluid">
-            </div>
+              <img
+              src="{{ produit.image.url }}"
+              class="img-fluid"
+            />
+          </div>
+          <div class="single_product_img">
+            <img
+              src="{{ produit.image.url }}"
+              class="img-fluid"
+            />
+          </div>
+          <div class="single_product_img">
+            <img
+              src="{{ produit.image.url }}"
+              class="img-fluid"
+            />
           </div>
         </div>
-        <div class="col-lg-8">
-          <div class="single_product_text text-center">
-            <h3>Foam filling cotton slow <br>
-                rebound pillows</h3>
-            <p>
-                Seamlessly empower fully researched growth strategies and interoperable internal or “organic” sources. Credibly innovate granular internal or “organic” sources whereas high standards in web-readiness. Credibly innovate granular internal or organic sources whereas high standards in web-readiness. Energistically scale future-proof core competencies vis-a-vis impactful experiences. Dramatically synthesize integrated schemas. with optimal networks.
-            </p>
-            <div class="card_area">
+      </div>
+      <div class="col-lg-8">
+        <div class="single_product_text text-center">
+          <h3>
+            {{ produit.nom }}
+          </h3>
+          <p>{{ produit.description }}</p>
+          <div class="card_area">
+            <form method="POST">
+                {% csrf_token %}
                 <div class="product_count_area">
-                    <p>Quantity</p>
-                    <div class="product_count d-inline-block">
-                        <span class="product_count_item inumber-decrement"> <i class="ti-minus"></i></span>
-                        <input class="product_count_item input-number" type="text" value="1" min="0" max="10">
-                        <span class="product_count_item number-increment"> <i class="ti-plus"></i></span>
-                    </div>
-                    <p>$5</p>
+                  <p>Quantity</p>
+                  <div class="product_count d-inline-block">
+                    <span class="product_count_item inumber-decrement total_quantite">
+                      <i class="ti-minus"></i></span>
+                    <input class="product_count_item input-number"
+                      type="text" name='quantite' value="1" min="0" max="10" id="total_quantite"/>
+                    <span class="product_count_item number-increment total_quantite">
+                      <i class="ti-plus"></i></span>
+                  </div>
+                  <p id="total_prix">${{ produit.prix }}</p>
                 </div>
-              <div class="add_to_cart">
-                  <a href="#" class="btn_3">add to cart</a>
-              </div>
-            </div>
+
+                {% if request.user.is_authenticated %}
+                    {% if deja_dans_le_panier %}
+                        <div class="add_to_cart">
+                            <a style="color:red" href="{% url 'single-product' 'rm' produit.id %}" class="btn_3">remove to cart</a>
+                        </div>
+                    {% else %}
+                        <div class="add_to_cart">
+                            <button type="submit" class="btn_3">add to cart</button>
+                        </div>
+                    {% endif %}
+                {% else %}
+                    <div class="add_to_cart">
+                      <a href="{% url 'login' %}" class="btn_3">Connectez vous pour l'ajouter au panier</a>
+                    </div>
+                {% endif %}
+
+            </form>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <!--================End Single Product Area =================-->
-   <!-- subscribe part here -->
-   <section class="subscribe_part section_padding">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-lg-8">
-                  <div class="subscribe_part_content">
-                      <h2>Get promotions & updates!</h2>
-                      <p>Seamlessly empower fully researched growth strategies and interoperable internal or “organic” sources credibly innovate granular internal .</p>
-                      <div class="subscribe_form">
-                          <input type="email" placeholder="Enter your mail">
-                          <a href="#" class="btn_1">Subscribe</a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
+</div>
   <!-- subscribe part end -->
 
   {% endblock content %}
