--- a/pillow/pillowmart/mart/templates/base.html
+++ b/pillow/pillowmart/mart/templates/base.html
@@ -5,11 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>
-        {% block title %}
-
-        {% endblock title %}
-    </title>
+    <title>{{ presentation.nom }}</title>
     <link rel="icon" href="/static/img/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
@@ -37,7 +33,7 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href={% url 'index' %}> <img src="/static/img/logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="{% url 'index' %}"> <img src="{{ info_site.logo.url }}"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -47,58 +43,54 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href={% url 'index' %}>Home</a>
+                                    <a class="nav-link" href="{% url 'index' %}">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href={% url 'about' %}>about</a>
+                                    <a class="nav-link" href="{% url 'about' %}">About</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href={% url 'blog' %} id="navbarDropdown_1"
+                                    <a class="nav-link dropdown-toggle" href="{% url 'blog' %}" id="navbarDropdown_1"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         product
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        <a class="dropdown-item" href={% url 'product_list' %}> product list</a>
-                                        <a class="dropdown-item" href={% url 'single_product' %}>product details</a>
-                                        
+                                        <a class="dropdown-item" href="{% url 'product_list' %}"> product list</a>
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href={% url 'blog' %} id="navbarDropdown_3"
+                                    <a class="nav-link dropdown-toggle" href="{% url 'blog' %}" id="navbarDropdown_3"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        pages
-                                    </a>
+                                        pages</a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href={% url 'login' %}> 
-                                            login
-                                            
-                                        </a>
-                                        <a class="dropdown-item" href={% url 'checkout' %}>product checkout</a>
-                                        <a class="dropdown-item" href={% url 'cart' %}>shopping cart</a>
-                                        <a class="dropdown-item" href={% url 'confirmation' %}>confirmation</a>
-                                        <a class="dropdown-item" href={% url 'elements' %}>elements</a>
+                                        {% if request.user.is_authenticated %}
+                                            <a class="dropdown-item" href="{% url 'logout' %}">logout</a>
+                                        {% else %}
+                                            <a class="dropdown-item" href="{% url 'login' %}">login</a>
+                                        {% endif %}
+                                        <a class="dropdown-item" href="{% url 'cart' %}">shopping cart</a>
+                                        <a class="dropdown-item" href="{% url 'checkout' %}">product checkout</a>
+                                        <a class="dropdown-item" href="{% url 'confirmation' %}">confirmation</a>
                                     </div>
                                 </li>
-                                
+
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href={% url 'blog' %} id="navbarDropdown_2"
+                                    <a class="nav-link dropdown-toggle" href="{% url 'blog' %}" id="navbarDropdown_2"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         blog
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href={% url 'blog' %}> blog</a>
-                                        <a class="dropdown-item" href={% url 'single_blog' %}>Single blog</a>
+                                        <a class="dropdown-item" href="{% url 'blog' %}"> blog</a>
                                     </div>
                                 </li>
-                                
+
                                 <li class="nav-item">
-                                    <a class="nav-link" href={% url 'contact' %}>Contact</a>
+                                    <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="hearer_icon d-flex align-items-center">
                             <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
-                            <a href={% url 'cart' %}>
+                            <a href="{% url 'cart' %}">
                                 <i class="flaticon-shopping-cart-black-shape"></i>
                             </a>
                         </div>
@@ -118,8 +110,34 @@
     </header>
     <!-- Header part end-->
 
+
     {% block content %}
+
     {% endblock content %}
+
+
+    {% block beforefooter %}
+    <!-- subscribe part here -->
+    <section class="subscribe_part section_padding">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="subscribe_part_content">
+                        <h2>Get promotions & updates!</h2>
+                        <p>Seamlessly empower fully researched growth strategies and interoperable internal or “organic” sources credibly innovate granular internal .</p>
+                        <form class="subscribe_form" method="POST" action="{% url 'newsletter' %}">
+                            {% csrf_token %}
+                            <input type="email" placeholder="Enter your mail" name='newsletter'>
+                            <button type='submit' class="btn_1">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- subscribe part end -->
+    {% endblock beforefooter %}
+
     <!--::footer_part start::-->
     <footer class="footer_part">
         <div class="footer_iner">
@@ -128,30 +146,28 @@
                     <div class="col-lg-8">
                         <div class="footer_menu">
                             <div class="footer_logo">
-                                <a href={% url 'index' %}><img src="/static/img/logo.png" alt="#"></a>
+                                <a href="{% url 'index' %}"><img src="{{ info_site.logo.url }}"></a>
                             </div>
                             <div class="footer_menu_item">
-                                <a href={% url 'index' %}>Home</a>
-                                <a href={% url 'about' %}>About</a>
-                                <a href={% url 'product_list' %}>Products</a>
-                                <a href="#">Pages</a>
-                                <a href={% url 'blog' %}>Blog</a>
-                                <a href="{% url 'contact' %}>Contact</a>
+                                <a href="{% url 'index' %}">Home</a>
+                                <a href="{% url 'about' %}">About</a>
+                                <a href="{% url 'product_list' %}">Products</a>
+                                <a href="{% url 'blog' %}">Blog</a>
+                                <a href="{% url 'contact' %}">Contact</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="social_icon">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            {% for icone in social_account %}
+                                <a href="{{ icone.lien }}"><i class="fab {{ icone.icon }}"></i></a>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
+
         <div class="copyright_part">
             <div class="container">
                 <div class="row ">
