--- a/pillow/pillowmart/mart/templates/register.html
+++ b/pillow/pillowmart/mart/templates/register.html
@@ -1,4 +1,5 @@
-{% extends '../base/base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% block content %}
 
 <!-- breadcrumb part start-->
 <section class="breadcrumb_part">
