param de gabarie1 rec

--- a/pillow/pillowmart/mart/templates/about.html
+++ b/pillow/pillowmart/mart/templates/about.html
@@ -143,4 +143,5 @@ About
     </section>
     <!-- subscribe part end -->
     {% endblock content %}
-    
+    {% block footer %}
+    {% endblock footer %}
