--- a/pillow/pillowmart/mart/templates/base.html
+++ b/pillow/pillowmart/mart/templates/base.html
@@ -116,7 +116,7 @@
     {% endblock content %}
 
 
-    {% block beforefooter %}
+    {% block footer %}
     <!-- subscribe part here -->
     <section class="subscribe_part section_padding">
         <div class="container">
@@ -136,7 +136,7 @@
         </div>
     </section>
     <!-- subscribe part end -->
-    {% endblock beforefooter %}
+    {% endblock footer %}
 
     <!--::footer_part start::-->
     <footer class="footer_part">
