--- a/pillow/pillowmart/mart/templates/blog.html
+++ b/pillow/pillowmart/mart/templates/blog.html
@@ -43,7 +43,7 @@ Blog
                                 </a>
                                 <p>{{ article.contenu }}</p>
                                 <ul class="blog-info-link">
-                                    <li><a href="{% url 'blog' 'cath' article.categorie_id %}"><i class="far fa-user"></i> {{ article.categorie }}</a></li>
+                                    <li><a href="{% url 'blog' 'categorie' article.categorie_id %}"><i class="far fa-user"></i> {{ article.categorie }}</a></li>
                                     <li><a href="#"><i class="far fa-comments"></i> 03 Comments</a></li>
                                 </ul>
                             </div>
@@ -85,3 +85,5 @@ Blog
     <!--================Blog Area =================-->
 
     {% endblock content %}
+    {% block footer %}
+    {% endblock footer %}
