param gabarie rec2

--- a/pillow/pillowmart/mart/templates/cart.html
+++ b/pillow/pillowmart/mart/templates/cart.html
@@ -176,4 +176,5 @@ Cart
   <!--================End Cart Area =================-->
 
 {% endblock content %}
-    
+{% block footer %}
+{% endblock footer %}    
