--- a/pillow/pillowmart/mart/templates/index.html
+++ b/pillow/pillowmart/mart/templates/index.html
@@ -264,4 +264,5 @@ index
     </section>
     <!-- subscribe part end -->
     {% endblock content %}
-    
+    {% block footer %}
+    {% endblock footer %}
