structure d'un projet django2

--- a/pillow/pillowmart/mart/templates/pages/about.html
+++ b/pillow/pillowmart/mart/templates/pages/about.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html' %}
+{% extends 'bases/base.html' %}
 
 
 {% block title %}
@@ -45,7 +45,7 @@ About
     <section class="feature_part section_padding">
         <div class="container">
             
-        {% include "innovate_message.html" %}
+        {% include "pages/innovate_message.html" %}
             <div class="row justify-content-between">
                 <div class="col-lg-6">
                     <div class="feature_part_tittle">
@@ -123,7 +123,7 @@ About
         </div>
     </section>
     <!-- client review part end -->
-    {% include "temoignage.html" %}
+    {% include "pages/temoignage.html" %}
     <!-- subscribe part here -->
     <section class="subscribe_part section_padding">
         <div class="container">
