--- a/pillow/pillowmart/mart/templates/pages/blog.html
+++ b/pillow/pillowmart/mart/templates/pages/blog.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html' %}
+{% extends 'bases/base.html' %}
 
 {% block title %}
 Blog
@@ -77,7 +77,7 @@ Blog
                         </nav>
                     </div>
                 </div>
-                {% include "aside-blog.html" %}
+                {% include "pages/aside-blog.html" %}
                 
             </div>
         </div>
