--- a/pillow/pillowmart/mart/templates/pages/product_list.html
+++ b/pillow/pillowmart/mart/templates/pages/product_list.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html' %}
+{% extends 'bases/base.html' %}
 
 
 {% block title %}
@@ -98,14 +98,14 @@ Product list
 <!-- product list part end-->
 
 <!-- client review part here -->
-{% include "temoignage.html" %}
+{% include "pages/temoignage.html" %}
 <!-- client review part end -->
 
 <!-- feature part here -->
 <section class="feature_part section_padding">
   <div class="container">
 
-    {% include "innovate_message.html" %}
+    {% include "pages/innovate_message.html" %}
 
     <div class="row justify-content-center">
       <div class="col-lg-3 col-sm-6">
