--- a/pillow/pillowmart/mart/templates/pages/single-blog.html
+++ b/pillow/pillowmart/mart/templates/pages/single-blog.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html' %}
+{% extends 'bases/base.html' %}
 
 
 {% block title %}
@@ -222,7 +222,7 @@ Single blog
           </form>
         </div>
       </div>
-      {% include "aside-blog.html" %}
+      {% include "pages/aside-blog.html" %}
     </div>
   </div>
 </section>
