--- a/pillow/pillowmart/mart/templates/pages/index.html
+++ b/pillow/pillowmart/mart/templates/pages/index.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html' %}
+{% extends 'bases/base.html' %}
 
 
 {% block title %}
@@ -48,10 +48,10 @@ index
                             <div class="col-lg-5 col-sm-6">
                                 <div class="single_product_content">
                                     <h5>Started from $10</h5>
-                                    <h2> <a href="single-product.html">Printed memory foam 
+                                    <h2> <a href="{ % url 'single-product' %}">Printed memory foam 
                                         brief modern throw 
                                         pillow case</a> </h2>
-                                    <a href="product_list.html" class="btn_3">Explore Now</a>
+                                    <a href="{% url 'product_list' %}" class="btn_3">Explore Now</a>
                                 </div>
                             </div>
                         </div>
@@ -67,10 +67,10 @@ index
                             <div class="col-lg-5 col-sm-6">
                                 <div class="single_product_content">
                                     <h5>Started from $10</h5>
-                                    <h2> <a href="single-product.html">Printed memory foam 
+                                    <h2> <a href="{ % url 'single-product' %}">Printed memory foam 
                                         brief modern throw 
                                         pillow case</a> </h2>
-                                    <a href="product_list.html" class="btn_3">Explore Now</a>
+                                    <a href="{% url 'product_list' %}" class="btn_3">Explore Now</a>
                                 </div>
                             </div>
                         </div>
@@ -86,10 +86,10 @@ index
                             <div class="col-lg-5 col-sm-6">
                                 <div class="single_product_content">
                                     <h5>Started from $10</h5>
-                                    <h2> <a href="single-product.html">Printed memory foam 
+                                    <h2> <a href="{ % url 'single-product' %}">Printed memory foam 
                                             brief modern throw 
                                             pillow case</a> </h2>
-                                    <a href="product_list.html" class="btn_3">Explore Now</a>
+                                    <a href="{% url 'product_list' %}" class="btn_3">Explore Now</a>
                                 </div>
                             </div>
                         </div>
@@ -117,7 +117,7 @@ index
                         <div class="single_product_item_thumb">
                             <img src="/static/img/tranding_item/tranding_item_1.png" alt="#" class="img-fluid">
                         </div>
-                        <h3> <a href="single-product.html">Cervical pillow for airplane
+                        <h3> <a href="{ % url 'single-product' %}">Cervical pillow for airplane
                         car office nap pillow</a> </h3>
                         <p>From $5</p>
                     </div>
@@ -125,21 +125,21 @@ index
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_product_item">
                         <img src="/static/img/tranding_item/tranding_item_2.png" alt="#" class="img-fluid">
-                        <h3> <a href="single-product.html">Foam filling cotton slow rebound pillows</a> </h3>
+                        <h3> <a href="{ % url 'single-product' %}">Foam filling cotton slow rebound pillows</a> </h3>
                         <p>From $5</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_product_item">
                         <img src="/static/img/tranding_item/tranding_item_3.png" alt="#" class="img-fluid">
-                        <h3> <a href="single-product.html">Memory foam filling cotton Slow rebound pillows</a> </h3>
+                        <h3> <a href="{ % url 'single-product' %}">Memory foam filling cotton Slow rebound pillows</a> </h3>
                         <p>From $5</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_product_item">
                         <img src="/static/img/tranding_item/tranding_item_4.png" alt="#" class="img-fluid">
-                        <h3> <a href="single-product.html">Cervical pillow for airplane
+                        <h3> <a href="{ % url 'single-product' %}">Cervical pillow for airplane
                         car office nap pillow</a> </h3>
                         <p>From $5</p>
                     </div>
@@ -147,14 +147,14 @@ index
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_product_item">
                         <img src="/static/img/tranding_item/tranding_item_5.png" alt="#" class="img-fluid">
-                        <h3> <a href="single-product.html">Foam filling cotton slow rebound pillows</a> </h3>
+                        <h3> <a href="{ % url 'single-product' %}">Foam filling cotton slow rebound pillows</a> </h3>
                         <p>From $5</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_product_item">
                         <img src="/static/img/tranding_item/tranding_item_6.png" alt="#" class="img-fluid">
-                        <h3> <a href="single-product.html">Memory foam filling cotton Slow rebound pillows</a> </h3>
+                        <h3> <a href="{ % url 'single-product' %}">Memory foam filling cotton Slow rebound pillows</a> </h3>
                         <p>From $5</p>
                     </div>
                 </div>
