--- a/pillow/pillowmart/mart/templates/bases/base.html
+++ b/pillow/pillowmart/mart/templates/bases/base.html
@@ -160,7 +160,7 @@
                     <div class="col-lg-4">
                         <div class="social_icon">
                             {% for icone in social_account %}
-                                <a href="{{ icone.lien }}"><i class="fab {{ icone.icon }}"></i></a>
+                                <a href="{{ social_account.lien }}"><i class="fab {{ social_account.icon }}"></i></a>
                             {% endfor %}
                         </div>
                     </div>
